moved executable paths to config

--- a/databanks.conf
+++ b/databanks.conf
@@ -1,8 +1,16 @@
 # Where we locate everything:
-
 DATADIR   = /data/
 BINDIR    = /data/bin/
 FASTADIR  = /data/fasta/
 STATSDIR  = /data/status/
 FLAGSDIR  = /data/flags/
 WHYNOTDIR = /data/scratch/whynot2/
+
+# some executables we use
+RUN_MAKE        = /usr/local/bin/mrs-run-and-log
+PDBREDOSCRIPT   = /data/zata/pdb_redo.csh
+MKDSSP          = /usr/local/bin/mkdssp
+MKHSSP          = /usr/local/bin/mkhssp
+CVHSSP          = /usr/local/bin/hsspconv
+PERL            = /usr/bin/perl
+NICE            = /usr/bin/nice
