mre variables to config

--- a/databanks.conf
+++ b/databanks.conf
@@ -5,6 +5,7 @@ FASTADIR  = /data/fasta/
 STATSDIR  = /data/status/
 FLAGSDIR  = /data/flags/
 WHYNOTDIR = /data/scratch/whynot2/
+TMPDIR    = /data/tmp/
 
 # some executables we use
 RUN_MAKE        = /usr/local/bin/mrs-run-and-log
